--- a/.github/workflows/record.yml
+++ b/.github/workflows/record.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Commit files
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "i@iochen.com"
+          git config --local user.name "Richard Chen - GitHub Action"
           git add record.json record.png
           git commit -m "$(date)"
 
